@@ -1,6 +1,7 @@
 Development Portal (2019-11-9 shi)
 ==============================
 Add data source links to org and aid in dflat SAVi
+Update table margins
 
 
 Development Portal (2019-11-7 shi)
